ubiquity (2.2.13) UNRELEASED; urgency=low

  * Kde_ui: 
    - fixed (LP: #550466) (LP: #550472) using kmessage box for quit dialog
    - fixed (LP: #540202) hide widgets until translated

 -- Roman Shtylman <shtylman@gmail.com>  Thu, 01 Apr 2010 02:25:27 -0400

ubiquity (2.2.12) lucid; urgency=low

  [ Evan Dandrea ]
  * Accept and discard arguments to the KDE frontend's
    on_keyboard_layout_selected function (LP: #552399).

  [ Colin Watson ]
  * Fix pkgsel/ignore-incomplete-language-support check (LP: #527623).
  * KDE frontend:
    - Ensure that entries in extra_bar_frames are never None (LP: #536912).
    - Lock out manual partitioning operations while the partitioning backend
      is running (LP: #540203).
  * Don't lower-case the locale attribute on frontends.  This was added a
    long time ago; since then, it's become unnecessary since i18n.get_string
    lower-cases the locale itself, and it prevented us from finding
    slideshow files for language variants (LP: #476269).
  * Automatic update of included source packages: partman-auto 89ubuntu4,
    partman-ext3 58ubuntu2.

  [ Jonathan Riddell ]
  * Move oem-config-prepare-kde.desktop install directory to
    /usr/share/applications/kde4/, else it is labelled as a KDE 3
    application

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 01 Apr 2010 01:27:27 +0100

ubiquity (2.2.11) lucid; urgency=low

  [ Evan Dandrea ]
  * Get the slideshow dimensions from the slideshow.conf file as they
    now vary from distribution to distribution.
  * Give the installer window a slightly larger bottom edge to make the
    grey border look less ugly.
  * Connect the new installer window's skip button to the appropriate
    function.
  * Slighly tweak the layout so the progress widgets are more centered
    in their frame.
  * Translate the skip button in the new install window (LP: #551554).
  * Update the interface when the user presses one of the buttons on the
    finished_dialog (LP: #551574).